link TripsDetails to webservice & add getByID to TripsService

--- a/frontend/src/app/tripsdetail/tripsdetail.html
+++ b/frontend/src/app/tripsdetail/tripsdetail.html
@@ -11,7 +11,7 @@
 	
 	<div class="row">
 		<div class="col-md-12">
-			<img data-src="holder.js/100%x350/text:Google Maps Here !" alt="">
+			<img holder data-src="holder.js/100%x450/text:Google Maps Here !" alt="">
 		</div>
 	</div>
 
