--- a/frontend/src/app/tripsdetail/tripsdetail.html
+++ b/frontend/src/app/tripsdetail/tripsdetail.html
@@ -2,6 +2,7 @@
 	
 	<div class="row">
 		<div class="col-md-12">
+			<!-- <a ui-sref="trips"><i class="glyphicon glyphicon-chevron-left"></i></a> -->
 			<h1 ng-bind="trip.title" class="trips-detail-header"></h1>
 			<div class="trip-detail-locationdatetime">
 				<span ng-bind="trip.location"></span>, le <span ng-bind="trip.date"></span> à <span ng-bind="trip.time"></span>
@@ -17,7 +18,7 @@
 
 	<div class="row">
 		<div class="col-md-8">
-			<div ng-bind="trip.description" class="trips-detail-description"></div>
+			<div ng-bind-html="trip.description" class="trips-detail-description"></div>
 		</div>
 
 		<div class="col-md-4">
