--- a/frontend/src/app/tripsnew/tripsnew.html
+++ b/frontend/src/app/tripsnew/tripsnew.html
@@ -2,16 +2,17 @@
 	
 	<h1>Create a new trip</h1>
 
-	<form name="newTrip" ng-submit="send()" novalidate>
+	<form name="newTrip" ng-submit="add()" novalidate>
 		<div class="row">
 			<div class="col-md-12">
 				<div class="form-group" ng-class="{'has-error': !newTrip.title.$valid && newTrip.title.$dirty}">
 					<label for="title">Title</label>
-					<input type="text" name="title" ng-model="trip.title" 
-						class="form-control" placeholder="Title of your trip" required />
+					<input type="text" name="title" class="form-control" placeholder="Title of your trip"
+						 ng-model="trip.title" ng-minlength="3" required />
 					<span class="help-block" ng-messages="newTrip.title.$error" 
 						ng-show="!newTrip.title.$valid && newTrip.title.$dirty">
 						<span ng-message="required">Title is required</span>
+						<span ng-message="minlength">Title is at minimum 3 characters</span>
 					</span>
 				</div>
 			</div>
@@ -21,33 +22,36 @@
 			<div class="col-md-4">
 				<div class="form-group" ng-class="{'has-error': !newTrip.location.$valid && newTrip.location.$dirty}">
 					<label for="location">Location</label>
-					<input type="text" name="location" ng-model="trip.location" 
-						class="form-control" placeholder="Location of your trip" required />
+					<input type="text" name="location" class="form-control" placeholder="Location of your trip" 
+						ng-model="trip.location" ng-minlength="3" required/>
 					<span class="help-block" ng-messages="newTrip.location.$error"
 						ng-show="!newTrip.location.$valid && newTrip.location.$dirty">
 						<span ng-message="required">Location is required</span>
+						<span ng-message="minlength">Location is at minimum 3 characters</span>
 					</span>
 				</div>
 			</div>
 			<div class="col-md-4">
 				<div class="form-group" ng-class="{'has-error': !newTrip.date.$valid && newTrip.date.$dirty}">
 					<label for="date">Date</label>
-					<input type="date" name="date" ng-model="trip.date" 
-						class="form-control" placeholder="Date of your trip" required />
+					<input type="text" name="date" class="form-control" placeholder="DD/MM/YYYY"
+						 ng-model="trip.date" pattern="[0-2][0-9]\/[0-1][0-9]\/[0-9]{4}" required />
 					<span class="help-block" ng-messages="newTrip.date.$error"
 						ng-show="!newTrip.date.$valid && newTrip.date.$dirty">
 						<span ng-message="required">Date is required</span>
+						<span ng-message="pattern">Date format isn't valid</span>
 					</span>
 				</div>
 			</div>
 			<div class="col-md-4" ng-class="{'has-error': !newTrip.time.$valid && newTrip.time.$dirty}">
 				<div class="form-group">
 					<label for="time">Time</label>
-					<input type="time" name="time" ng-model="trip.time" 
-						class="form-control" placeholder="Time of your trip" required />
+					<input type="text" name="time" class="form-control" placeholder="HH:MM"
+						 ng-model="trip.time" pattern="[0-2][0-9]:[0-5][0-9]"required />
 					<span class="help-block" ng-messages="newTrip.time.$error"
 						ng-show="!newTrip.time.$valid && newTrip.time.$dirty">
 						<span ng-message="required">Time is required</span>
+						<span ng-message="pattern">Time format isn't valid</span>
 					</span>
 				</div>
 			</div>
@@ -68,6 +72,12 @@
 				<div text-angular name="description" ng-model="trip.description" class="trips-new-description"></div>
 			</div>
 		</div>
+
+		<div class="pull-right">
+			<button type="submit" class="btn btn-success" ng-disabled="!newTrip.$valid">Save</button>
+			<a ui-sref="trips" class="btn btn-default">Cancel</a>
+		</div>
+		
 	</form>
 
 </div>
