--- a/frontend/scss/_Hero.scss
+++ b/frontend/scss/_Hero.scss
@@ -4,7 +4,8 @@
     background-size: auto 100%;
     height: 410px;
 
-    padding-top: 100px;
+	padding-left: 100px;
+    padding-top: 50px;
 
     @media screen and (min-width: 1450px) {
         background-size: 100% auto;
