--- a/frontend/src/app/trips/trips.html
+++ b/frontend/src/app/trips/trips.html
@@ -2,18 +2,86 @@
 	<!-- ============== SEARCH BAR ================= -->
     <section class="trips-search">
         <div class="container">
-            <div class="input-group">
-                <span class="input-group-addon">
-                    <i class="fa fa-search"></i>
-                </span>
+			<div class="row">
+				<div class="input-group col-md-8 col-md-offset-2">
 				
-                <input type="text" class="form-control" name="searchTrip" ng-model="searchTrip" placeholder="Rechercher" />
-				
-                <div class="input-group-btn">
-                    <a ui-sref="tripsnew" class="btn btn-default">
-                        <i class="fa fa-plus"></i>
-                    </a>
-                </div>
-            </div>
+					<span class="input-group-addon">
+						<i class="fa fa-search"></i>
+					</span>
+					<input type="text" class="form-control" name="searchTrip" ng-model="searchTrip" placeholder="Rechercher" />
+					
+					<div class="input-group-btn">
+						<a ui-sref="tripsnew" class="btn btn-default">
+							<i class="fa fa-plus"></i>
+						</a>
+					</div>
+				</div>
+			</div>
         </div>
     </section>
+	
+	<!-- ============== LISTE DES BALADES ================= -->
+	<section class="trips" ng-repeat="trip in filteredTrips=(trips | filter:searchTrip)">
+		<div class="trip container">
+			<div class="row" ui-sref="tripsdetail({tripID: trip._id})">
+				<div class="col-md-2">
+					<img holder data-src="holder.js/150x150/text:Photo"/>
+				</div>
+				<div class="col-md-8">
+					<div class="row">
+						<div class="col-md-6">
+							<h2 ng-bind="trip.title"></h2>
+						</div>
+						<div class="col-md-6">
+							<span ng-bind="trip.participants.length"></span>
+							<span>Participant</span>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-6">
+							<p ng-bind="trip.description"></p>
+						</div>
+						<div class="col-md-6">
+							<span ng-bind="trip.location"></span>
+							<span ng-bind="trip.date"></span>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	
+	<!-- ============== PAGINATION ================= -->
+	<section class="container">
+	
+		<nav class="col-md-offset-4 col-md-4">
+		  <ul class="pagination">
+			<li>
+			  <a href="#" aria-label="Previous">
+				<span aria-hidden="true">&laquo;</span>
+			  </a>
+			</li>
+			<li><a href="#">1</a></li>
+			<li><a href="#">2</a></li>
+			<li><a href="#">3</a></li>
+			<li><a href="#">4</a></li>
+			<li><a href="#">5</a></li>
+			<li>
+			  <a href="#" aria-label="Next">
+				<span aria-hidden="true">&raquo;</span>
+			  </a>
+			</li>
+		  </ul>
+		</nav>
+	
+	</section>
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
