--- a/frontend/src/app/tripsdetail/_tripsdetail.scss
+++ b/frontend/src/app/tripsdetail/_tripsdetail.scss
@@ -1,1 +1,23 @@
+.trips-detail {
+	
+	.trips-detail-description {
+		min-height: 100px;
+	}
 
+	.list-riders {
+		
+		padding-left: 0;
+		margin-top: 10px;
+
+		li {
+			list-style: none;
+
+            &:before {
+                font-family: FontAwesome;
+                content: "\f21c";
+
+                padding-right: 10px;
+            }
+		}
+	}
+}
