fix riders property rename

--- a/frontend/src/app/trips/trips.html
+++ b/frontend/src/app/trips/trips.html
@@ -33,7 +33,7 @@
 							<h2 ng-bind="trip.title"></h2>
 						</div>
 						<div class="col-md-6">
-							<span ng-bind="trip.participants.length"></span>
+							<span ng-bind="trip.riders.length"></span>
 							<span>Participant</span>
 						</div>
 					</div>
