--- a/frontend/src/app/trips/trips.html
+++ b/frontend/src/app/trips/trips.html
@@ -6,7 +6,9 @@
 				<span class="input-group-addon">
 					<i class="fa fa-search"></i>
 				</span>
-				<input type="text" class="form-control" name="searchTrip" ng-model="searchTrip" placeholder="Rechercher" />
+				
+				<input type="text" class="form-control" name="searchTrip" placeholder="Search" 
+						ng-model="searchTrip" ng-change="search()"/>
 				
 				<div class="input-group-btn">
 					<a ui-sref="tripsnew" class="btn btn-default">
@@ -18,43 +20,46 @@
     </section>
 	
 	<!-- ============== LISTE DES BALADES ================= -->
-	<section ng-repeat="trip in filteredTrips=(trips | filter:searchTrip)">
-		<div class="row Trip-item" ui-sref="tripsdetail({tripID:trip._id})">
-			<!-- Icone de la balade -->
-			<div class="col-xs-4 col-md-1">
-				<div class="Trip-picture">
-					<img holder data-src="holder.js/60x40"/>
+	<section ng-repeat="trip in trips">
+		<div class="panel-group" id="accordion">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<div class="row">
+						<div class="col-xs-4 col-md-1">
+							<img src="{{ 'https://maps.googleapis.com/maps/api/staticmap?center=' + trip.center.latitude + ',' + trip.center.longitude + '&zoom=' + trip.zoom + '&size=60x50' }}" />
+						</div>
+						<a href="{{ '#trip-' + trip._id }}" data-toggle="collapse" data-parent="#accordion">
+							<div class="col-xs-4 col-md-9">
+								<h4 ng-bind="trip.title"></h4>
+							</div>
+						</a>
+						<div class="col-xs-4 col-md-2">
+							<div class="trip-extra-links">
+								<div class="text-center">
+									<span class="badge" ng-bind="trip.riders.length"></span>
+									&nbsp;Participant(s)
+								</div>
+								<div>
+									<a class="btn btn-default btn-xs btn-block" ui-sref="tripsdetail({tripID: trip._id})">
+										Show details
+									</a>
+								</div>
+							</div>	
+						</div>
+					</div>
 				</div>
-			</div>
-
-			<!-- Informations -->
-			<div class="col-xs-8 col-md-11">
-
-				<!-- Ligne d'information principale -->
-				<div class="row">
-					<div class="col-xs-6 col-md-10">
-						<h4 class="Trip-name" ng-bind="trip.title"></h4>
-					</div>
-					<div class="col-xs-6 col-md-2">
-						<p class="Trip-part">
-							<b><span ng-bind="trip.riders.length"></span></b>
-							Participant(s)
-						</p>
-					</div>
-				</div>
-				
-				<!-- Ligne cachée -->
-				<div class="row Trip-info">
-					<hr/>
-					<div class="col-xs-8 col-md-8">
-						<p class="Trip-desc" ng-bind="trip.description"></p>
-					</div>
-					<div class="col-xs-4 col-md-4">
-						<p class="Trip-rdv">
-							<span class="Trip-loc" ng-bind="trip.location"/>
-							 |  
-							<span class="Trip-date" ng-bind="trip.date"/>
-						</p>
+				<div class="panel-collapse collapse" id="{{ 'trip-' + trip._id }}">
+					<div class="panel-body">
+						<div class="row">
+							<div class="col-xs-4 col-xs-offset-4 col-md-8 col-md-offset-1">
+								<p ng-bind-html="trip.description"></p>
+							</div>
+							<div class="col-xs-4 col-md-3">
+								<span ng-bind="trip.location"/>
+							 	&nbsp;|&nbsp;
+								<span ng-bind="trip.date"/>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -63,21 +68,21 @@
 	
 	<!-- ============== PAGINATION ================= -->
 	<section class="Nav">
-		<nav class="col-md-4 col-md-offset-4 ">
-		  <ul class="pagination">
-			<li>
-			  <a href="#" aria-label="Previous">
-				<span aria-hidden="true">&laquo;</span>
-			  </a>
-			</li>
-			<li><a href="#">1</a></li>
-			<li><a href="#">2</a></li>
-			<li><a href="#">3</a></li>
-			<li>
-			  <a href="#" aria-label="Next">
-				<span aria-hidden="true">&raquo;</span>
-			  </a>
-			</li>
-		  </ul>
+		<nav class="text-center">
+			<ul class="pagination">
+				<li>
+					<a aria-label="Previous" ng-click="changePage(page-1)">
+						<span aria-hidden="true">&laquo;</span>
+					</a>
+				</li>
+				<li ng-repeat="pageNumber in pages">
+					<a ng-bind="pageNumber" ng-click="changePage(pageNumber)"></a>
+				</li>
+				<li>
+					<a aria-label="Next" ng-click="changePage(page+1)">
+						<span aria-hidden="true">&raquo;</span>
+					</a>
+				</li>
+			</ul>
 		</nav>
 	</section>
